--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png" alt="Logo-transmi">
         <a href="index.html">Inicio</a>
         <a href="">Recarga tu tarjeta</a>
-        <a href="">Personaliza tu tarjeta</a>
+        <a href="./customize.html">Personaliza tu tarjeta</a>
         <a href="">Historial de viajes</a>
         <a href="planeatuviaje.html">Planea tu viaje</a>
         <img src="https://scotiabankfiles.azureedge.net/scotiabank-colombia/CodensaAssets/catalogue/images/promociones/sitp/transmilenio_160x160-02-1.png" alt="Transmi">
