Actualización de las funciones de la tarjeta SITP

--- a/customize.html
+++ b/customize.html
@@ -27,9 +27,9 @@
 							<p class="nombre">Jhon Doe</p>
 						</div>
 
-						<div class="grupo" >
+						<div class="grupo" id="cedula" >
 							<p class="label">Cédula</p>
-							<p class="cedula"><span class="mes">Número</span></p>
+							<p class="cedula">########</p>
 						</div>
 					</div>
 				</div>
@@ -65,8 +65,8 @@
 				<input type="text" id="inputNombre" maxlength="19" autocomplete="off">
 			</div>
 			<div class="grupo">
-				<label for="inputNumero">Cédula</label>
-				<input type="text" id="inputNumero" maxlength="19" autocomplete="off">
+				<label for="inputCedula">Cédula</label>
+				<input type="text" id="inputCedula" maxlength="14" autocomplete="off">
 				</div>
                 <button type="submit" class="btn-enviar">Enviar</button>
 			</div>
