--- a/recargas.html
+++ b/recargas.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="style.css/recargas.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- CSS only -->
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
     <title>Recargas</title>
 </head>
 <body>
@@ -20,12 +23,12 @@
     <main>
     <form action="" id="formulario-tarjeta" class="formulario-tarjeta">
         <div class="grupo">
-            <label for="inputNumero">Número Tarjeta</label>
-            <input type="text" id="inputNumero">
+            <label for="inputRecarga">Monto a recargar</label>
+            <input type="number" id="inputRecarga" required>
         </div><br>
         <div class="grupo">
-            <label for="inputRecarga">Monto a recargar</label>
-            <input type="text" id="inputRecarga">
+            <label for="inputCard">Numer de tarjeta</label>
+            <input type="number" id="inputCard" required>
         </div><br>
 
         
@@ -47,10 +50,17 @@
                     </div> <br>
         </div>
         <div class="btn">
-        <button type="submit" class="btn-pago" >Recargar</button>
+        <button type="submit" id="btn" class="btn-pago" >Recargar</button>
     </div>
     </form>
 </main>
 </div>
+
+
+
+
+<script src="/recarga.js"></script>
+
+
 </body>
 </html>
