--- a/histviajes.html
+++ b/histviajes.html
@@ -4,17 +4,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Historial de viajes</title>
 </head>
+<style>
+    nav {
+    position: relative;
+    margin: 1cm;
+    width: 1500px;
+    height: 50px;
+    left: 48%;
+    transform: translateX(-50%);
+    background-color: #34495e;
+    border-radius: 8px;
+    /* font-size: 0; */
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+nav a {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+    line-height: 50px;
+    /* position: relative; */
+    z-index: 1;
+    display: inline-block;
+    text-align: center;
+}
+
+nav .animation {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    z-index: 0;
+    background: #1abc9c;
+    border-radius: 8px;
+    transition: all .5s ease 0s;
+}
+
+nav a:nth-child(1) {
+    width: 100px;
+}
+
+nav a:nth-child(1):hover~.animation {
+    width: 100px;
+    left: 295px;
+}
+
+nav a:nth-child(2) {
+    width: 200px;
+}
+
+nav a:nth-child(2):hover~.animation {
+    width: 200px;
+    left: 395px;
+}
+
+nav a:nth-child(3) {
+    width: 250px;
+}
+
+nav a:nth-child(3):hover~.animation {
+    width: 250px;
+    left: 595px;
+}
+
+nav a:nth-child(4) {
+    width: 160px;
+}
+
+nav .start-home, a:nth-child(4):hover~.animation {
+    width: 160px;
+    left: 845px;
+}
+
+nav a:nth-child(5) {
+    width: 200px;
+}
+
+nav a:nth-child(5):hover~.animation {
+    width: 200px;
+    left: 1005px;
+}
+</style>
+
 <body>
+
+    <section>
+        <div>
+            <div id="flex1">
+                <img class="imgInicio" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png"
+                    alt="Logo-transmi">
+
+                <h1>Bienvenido a tu portal</h1>
+
+                <img class="imgInicio"
+                    src="https://scotiabankfiles.azureedge.net/scotiabank-colombia/CodensaAssets/catalogue/images/promociones/sitp/transmilenio_160x160-02-1.png"
+                    alt="Transmi">
+            </div>
+        </div>
+    </section>
+
     <nav>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png" alt="Logo-transmi">
         <a href="index.html">Inicio</a>
-        <a href="">Recarga tu tarjeta</a>
-        <a href="">Personaliza tu tarjeta</a>
-        <a href="">Historial de viajes</a>
+        <a href="./recargas.html">Recarga tu tarjeta</a>
+        <a href="./customize.html">Personaliza tu tarjeta</a>
+        <a href="./histviajes.html">Historial de viajes</a>
         <a href="planeatuviaje.html">Planea tu viaje</a>
-        <img src="https://scotiabankfiles.azureedge.net/scotiabank-colombia/CodensaAssets/catalogue/images/promociones/sitp/transmilenio_160x160-02-1.png" alt="Transmi">
+
+        <div class="animation start-home"></div>
+
     </nav>
     <main>
         <h1>Tu historial de viajes:</h1>
