--- a/pages/histviajes.html
+++ b/pages/histviajes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Historial de viajes</title>
 </head>
 <style>
@@ -98,8 +98,8 @@ nav a:nth-child(5):hover~.animation {
     <section>
         <div>
             <div id="flex1">
-                <img class="imgInicio" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png"
-                    alt="Logo-transmi">
+                <a href="../index.html"><img  href="../index.html" Inicio id="imgLogo" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png"
+                    alt="Logo-transmi"></a>
 
                 <h1>Bienvenido a tu portal</h1>
 
@@ -111,11 +111,11 @@ nav a:nth-child(5):hover~.animation {
     </section>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="./recargas.html">Recarga tu tarjeta</a>
-        <a href="./customize.html">Personaliza tu tarjeta</a>
-        <a href="./histviajes.html">Historial de viajes</a>
-        <a href="planeatuviaje.html">Planea tu viaje</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../pages/recargas.html">Recarga tu tarjeta</a>
+        <a href="../pages/customize.html">Personaliza tu tarjeta</a>
+        <a href="../pages/histviajes.html">Historial de viajes</a>
+        <a href="../pages/planeatuviaje.html">Planea tu viaje</a>
 
         <div class="animation start-home"></div>
 
