--- a/pages/planeatuviaje.html
+++ b/pages/planeatuviaje.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <style>
     nav {
@@ -98,8 +98,8 @@ nav .start-home, a:nth-child(5):hover~.animation {
     <section>
         <div>
             <div id="flex1">
-                <img class="imgInicio" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png"
-                    alt="Logo-transmi">
+                <a href="../index.html"><img  href="../index.html" Inicio id="imgLogo" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/TransMilenio_Logo.png"
+                    alt="Logo-transmi"></a>
 
                 <h1>Bienvenido a tu portal</h1>
 
@@ -111,14 +111,23 @@ nav .start-home, a:nth-child(5):hover~.animation {
     </section>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="./recargas.html">Recarga tu tarjeta</a>
-        <a href="./customize.html">Personaliza tu tarjeta</a>
-        <a href="./histviajes.html">Historial de viajes</a>
-        <a href="planeatuviaje.html">Planea tu viaje</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../pages/recargas.html">Recarga tu tarjeta</a>
+        <a href="../pages/customize.html">Personaliza tu tarjeta</a>
+        <a href="../pages/histviajes.html">Historial de viajes</a>
+        <a href="../pages/planeatuviaje.html">Planea tu viaje</a>
 
         <div class="animation start-home"></div>
 
     </nav>
+
+    <main>
+
+        <h2></h2>
+        
+        <a href="https://www.google.com/maps/dir///@4.6821816,-74.0530653,12z">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31812.02281343984!2d-74.11675166940546!3d4.682309916175617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9cb6430f8607%3A0x8eea5954ef14af30!2sEl%20Dorado%20International%20Airport%20Luis%20Carlos%20Gal%C3%A1n%20Sarmiento%20(BOG)!5e0!3m2!1sen!2sco!4v1648098750816!5m2!1sen!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <br> Click me</a>
+    </main>
 </body>
 </html>
